@@ -57,6 +57,8 @@ end
 
 ---@param factory Factory
 function District:remove(factory)
+    -- Make sure the nth_tick handlers are cleaned up
+    if factory.tick_of_deletion then util.nth_tick.cancel(factory.tick_of_deletion) end
     factory.parent = nil
     self:_remove(factory)
 end
