@@ -15,5 +15,6 @@
     "1.2.4",
     "1.2.6",
     "1.2.8",
-    "1.2.15"
+    "1.2.15",
+    "2.0.2"
 ]
