@@ -2,9 +2,6 @@
 
 local migration = {}
 
-function migration.global()
-end
-
 function migration.player_table(player_table)
     -- Reset all defaults tables since I don't want to deal with migrating them
     player_table.preferences.default_machines = nil
