@@ -7,10 +7,4 @@ function migration.global()
     storage.productivity_recipes = nil
 end
 
-function migration.player_table(player_table)
-end
-
-function migration.packed_factory(packed_factory)
-end
-
 return migration
