@@ -7,6 +7,7 @@ Date: 00. 00. 0000
     -
   Bugfixes:
     - Fixed a crash caused by migration
+    - Fixed a crash after deleting a District that had trashed factories inside it
     - Fixed a crash when trying to open the product picker with Pyanodon's active
 
 ---------------------------------------------------------------------------------------------------
